--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div id="home" class="home w3-container w3-margin-top-4 w3-cursive">
             <center>
             <p style="font-style: italic; font-size:x-large;">"The mind is the limit. When you face your struggles, you overcome them."</p>
-            <h1>MY AWESOME GAME</h1>
+            <h1>Neelam</h1>
             <h2>Pepito Perez (HS Freshman )</h2>
             <h3>Game Developer in the Making</h3>
             <p></p></center>
